<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2014 Google, Inc

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Game Out</string>
    <string name="action_settings">Settings</string>

    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>

    <string name="set_center">Set center</string>

    <string name="last_update_time_label">Last location update time: </string>

    <string name="location_updated_message">Location updated</string>
    <string name="switch_txt">Start</string>
    <string name="stop_txt">Stop</string>
    <string name="start_txt">Start</string>
    <string name="calib_txt">Center</string>
    <string name="dist_txt">Dist to center</string>
    <string name="score_txt">888</string>
    <string name="best_score_txt">777</string>
    <string name="instructions">Instructions</string>
    <string name="settings">Settings</string>
    <string name="online_game">Multi Player</string>
    <string name="quick_game">Single Player</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="leaderboard">Leaderbord</string>
    <string name="achievements">Achievements</string>
    <string name="credits">Credits</string>
    <string name="login_invite">Login to play online</string>
    <string name="automatch_player">Quick Match</string>
    <string name="invite_players">Invite Players</string>
    <string name="show_invitations">Show Invitations</string>
    <string name="param_test_button">Parameter test button</string>
    <string name="banner_ads_unit_id">ca-app-pub-2963674502359443/6088656017</string>
    <string name="fs_ads_unit_id">ca-app-pub-2963674502359443/7565389212</string>
    <string name="ads_level">Ads level</string>
    <string name="app_settings">App Settings</string>
    <string name="game_settings">Game Settings</string>
    <string name="server_name">Server name</string>
    <string name="parameters">parameters</string>
    <string name="rebond">Rebond</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
