<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="fr.ecp.sio.gameout.MainActivity">

    <!-- sign-in button -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/login_invite">
    </TextView>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/online_game_button"
        android:visibility="gone"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/online_game"/>
    <Button
        android:id="@+id/quick_play_button"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/quick_game"/>
    <Button
        android:id="@+id/instructions_button"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/instructions"/>
    <Button
        android:id="@+id/settings_button"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"/>
    <Button
        android:id="@+id/exit_button"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        />
</LinearLayout>
