<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory
        android:title="@string/game_settings"
        android:key="Game_settings_key">
        <ListPreference
            android:key="pref_ads_level"
            android:title="@string/ads_level"
            android:entries="@array/ads_level"
            android:entryValues="@array/ads_level"
            android:dialogLayout="@layout/dropdown_item"/>
        <ListPreference
            android:key="server"
            android:title="@string/server_name"
            android:entries="@array/server_name"
            android:entryValues="@array/server_name"
            android:dialogLayout="@layout/dropdown_item"/>
        <EditTextPreference
            android:key="rebond_key"
            android:title="@string/rebond"/>
    </PreferenceCategory>
</PreferenceScreen>

