<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.ecp.sio.gameout.salon.SettingsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/leaderboard_button"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"/>
        <Button
            android:id="@+id/achievements_button"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/achievements"/>
        <Button
            android:id="@+id/credits_button"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2963674502359443/6088656017"
        />

</RelativeLayout>
