<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2014 Google, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dip">

    <fr.ecp.sio.gameout.PlayField.PlayFieldSurfaceView
        android:id="@+id/surface_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_delta_view" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New"
        android:id="@+id/toggle_gps_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:onClick="toggleButtonHandler"
        android:checked="false" />

    <Button
        android:id="@+id/calib_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calib_txt"
        android:onClick="calibButtonHandler"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/toggle_gps_button" />

    <Button
        android:id="@+id/param_test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:onClick="paramTestButtonHandler"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/calib_button" />

    <Button
        android:id="@+id/start_mono_pong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="6dp"
        android:onClick="startMonoPongButtonHandler"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/param_test_button" />

    <Button
        android:id="@+id/start_multi_pong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:onClick="startMultiPongButtonHandler"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/start_mono_pong"/>

    <TextView
        android:id="@+id/latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_label"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@+id/toggle_gps_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/latitude_label"
        android:layout_alignBaseline="@id/latitude_label"
        android:layout_marginLeft="@dimen/small_margin_left"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude_label"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/latitude_label"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/longitude_label"
        android:layout_alignBaseline="@id/longitude_label"
        android:layout_marginLeft="@dimen/small_margin_left"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/text_delta_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dist_txt"
        android:layout_below="@+id/longitude_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         />

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score_txt"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/surface_view"
        android:layout_alignEnd="@+id/surface_view"
        android:layout_alignBottom="@+id/calib_button" />

    <TextView
        android:id="@+id/text_view_best_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/best_score_txt"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignBaseline="@id/text_view_score"
        android:layout_alignBottom="@id/text_view_score"
        android:layout_toLeftOf="@id/text_view_score"
        android:layout_toStartOf="@id/text_view_score" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:ellipsize="end"
        android:id="@+id/edit_text_log_server"
        android:layout_alignParentRight="true"
        android:layout_below="@id/calib_button"
        android:layout_toRightOf="@id/latitude_text" />

    <Button
        android:id="@+id/move_left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/toggle_gps_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/toggle_gps_button"
        android:onClick="moveLeftButtonHandler"
        android:text="&lt;&lt;" />

    <Button
        android:id="@+id/move_right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/surface_view"
        android:layout_alignEnd="@+id/text_view_score"
        android:layout_alignRight="@+id/text_view_score"
        android:onClick="moveRightButtonHandler"
        android:text=">>" />

</RelativeLayout>
